[package]
name = "search_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tantivy = { version = "0.19", features = ["mmap"] }
jieba-rs = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { version = "1.0", features = ["backtrace"] }
walkdir = "2.3"
toml = "0.7"
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4", features = ["cors", "fs"] }
http = "0.2"
chrono = "0.4"
regex = "1.10"
once_cell = "1.18" 